RESOLVED FIXED298540
Images on axton.gallery disappear momentarily when clicking on them
https://bugs.webkit.org/show_bug.cgi?id=298540
Summary Images on axton.gallery disappear momentarily when clicking on them
Taher
Reported 2025-09-08 09:19:58 PDT
When applying an SVG filter that uses a filter primitive with a subregion defined in relative values, the referenced element or image does not render as expected.
Attachments
test case (990 bytes, text/html)
2025-09-08 14:40 PDT, Said Abou-Hallawa
no flags
Taher
Comment 1 2025-09-08 09:20:16 PDT
Taher
Comment 2 2025-09-08 10:01:50 PDT
Said Abou-Hallawa
Comment 3 2025-09-08 14:40:07 PDT
Created attachment 476677 [details] test case
Said Abou-Hallawa
Comment 4 2025-09-28 22:57:08 PDT
EWS
Comment 5 2025-10-13 12:53:43 PDT
Committed 301424@main (41e6b037fd00): <https://commits.webkit.org/301424@main> Reviewed commits have been landed. Closing PR #51485 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.